--- a/Server/package.json
+++ b/Server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "pg": "^8.11.1",
     "socket.io": "^4.7.1"
   }
 }
