--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "pg": "^8.11.1",
+    "pg-format": "^1.0.4",
     "socket.io": "^4.7.1"
   }
 }
